--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
       run: |
         git config --global user.name 'Bot'
         git config --global user.email 'hillstub@users.noreply.github.com'
+        git add _posts/
+        git add assets/img/
         git commit -am "Automated additional posts and images"
         git push
     # Standard usage
