added forward slash to img

--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,10 @@ sass:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
+ exclude:
+   - get_gsheets_posts.py
+   - requirements.txt
+   - .nojekyll
 #   - gemfiles/
 #   - Gemfile
 #   - Gemfile.lock
