--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,10 @@ jobs:
         git config --global user.email 'hillstub@users.noreply.github.com'
         git add _posts/
         git add assets/img/
-        git commit -am "Automated additional posts and images"
-        git push
+        if [[ "$(git status --porcelain)" != "" ]]; then 
+          git commit -am "Automated additional posts and images"
+          git push
+        fi
     # Specify the target branch (optional)
     - uses: helaili/jekyll-action@v2
       with:
