--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
       run: python get_gsheets_posts.py
     - name: Commit posts and images
       run: |
+        git pull
         git config --global user.name 'Bot'
         git config --global user.email 'hillstub@users.noreply.github.com'
         git add _posts/
