--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,14 +33,13 @@ jobs:
       run: python get_gsheets_posts.py
     - name: Commit posts and images
       run: |
-        git pull
         git config --global user.name 'Bot'
         git config --global user.email 'hillstub@users.noreply.github.com'
         git add _posts/
         git add assets/img/
         if [[ "$(git status --porcelain)" != "" ]]; then 
           git commit -am "Automated additional posts and images"
-          git push
+          git push -f origin master
         fi
     # Specify the target branch (optional)
     - uses: helaili/jekyll-action@v2
