--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
   schedule:
     - cron: "15 22 * * *"
-  workflow_dispatch:
+  repository_dispatch:
+    types: run_workflow
 jobs:
   jekyll:
     runs-on: ubuntu-latest
